line_det/logs/lane_states_original/build.make.000.log
[35m[1mScanning dependencies of target lane_states_node
[0m[100%] [32mBuilding CXX object CMakeFiles/lane_states_node.dir/lane_states_node.cpp.o
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states_original/lane_states_node.cpp: In function ‘std_msgs::Float32MultiArray sense(std_msgs::Float32MultiArray)’:
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states_original/lane_states_node.cpp:116:2: error: ‘else’ without a previous ‘if’
  else if(L==0 and C == 0 and R > 0) 
  ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states_original/lane_states_node.cpp:118:2: error: ‘else’ without a previous ‘if’
  else if(L==0 and C > 0 and R == 0) 
  ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states_original/lane_states_node.cpp:120:2: error: ‘else’ without a previous ‘if’
  else if(L==0 and C > 0 and R > 0) 
  ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states_original/lane_states_node.cpp:122:2: error: ‘else’ without a previous ‘if’
  else if(L > 0 and C == 0 and R == 0) 
  ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states_original/lane_states_node.cpp:124:2: error: ‘else’ without a previous ‘if’
  else if(L > 0 and C == 0 and R > 0) 
  ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states_original/lane_states_node.cpp:126:2: error: ‘else’ without a previous ‘if’
  else if(L > 0 and C > 0 and R == 0) 
  ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states_original/lane_states_node.cpp:128:2: error: ‘else’ without a previous ‘if’
  else if(L > 0 and C > 0 and R > 0)
  ^
make[2]: *** [CMakeFiles/lane_states_node.dir/lane_states_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/lane_states_node.dir/all] Error 2
make: *** [all] Error 2
